Fixed: aligned the nav bar buttons  with the join us button.

--- a/client/CSS/style.css
+++ b/client/CSS/style.css
@@ -38,11 +38,11 @@ header ul {
 	gap: 20px;
 	justify-content: end;
 	list-style: none;
-	font-size: 15pt;
+	font-size: 15px;
 }
 
 header li {
-	padding: 15px;
+	padding: 10px;
 	color: white;
 }
 
@@ -64,7 +64,6 @@ header ul a {
 	background-color: #306a9a;
 	width: 80px;
 	text-transform: uppercase;
-	margin-top: 10px;
 }
 
 .navbtn:hover {
